--- a/estilos/style.css
+++ b/estilos/style.css
@@ -225,7 +225,7 @@ section{
         padding: 0px;
     }
     #delivery h4{
-        color: #b60719;
+        color: #dc3545;
         text-align: center;
         font-weight: bold;
     }
