--- a/estilos/style.css
+++ b/estilos/style.css
@@ -174,13 +174,22 @@ section{
 
 
 /*DELIVERY*/
+#delivery .contenedores{
+    width: 80%;
+    min-height: 300px;
+    margin: auto;
+}
 #delivery .contacto{
     color: #ffffff;
 }
 #delivery .contacto i, p{
     font-size: 20px;
 }
-
+#delivery .contacto iframe{
+    width: 500px;
+    height: 250px;
+    border: 1pz solid white;
+}
 
 
 
@@ -240,6 +249,12 @@ section{
         text-align: center;
         font-size: 20px;
     }
+
+    #delivery .container{
+        margin: auto;
+        width: 200%;
+        border: 1px solid black;
+    }
     #delivery img{
         width: 80px;
         margin-top: 60px;
@@ -253,7 +268,15 @@ section{
         text-align: center;
         font-weight: bold;
     }
-
+    #delivery .contacto {
+        margin-bottom: 40px;
+        margin-top: -20px;
+    }
+    #delivery .contacto iframe{
+        width: 300px;
+        height: 150px;
+        margin: auto;
+    }
     #footer p{
         font-size: 15px;
     }
