--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ section{
     font-size: 20px;
 }
 #delivery .contacto iframe{
+    width: 500px;
     height: 250px;
     border: 1pz solid white;
 }
@@ -258,21 +259,27 @@ section{
         width: 80px;
         margin-top: 60px;
     }
-    #delivery iframe{
-        width: 100%;
-        padding: 0px;
-    }
     #delivery h4{
         color: #dc3545;
         text-align: center;
         font-weight: bold;
+    }
+    #delivery p{
+        font-size: 20px;
+        color: white;
+        text-decoration: none;
+    }
+    #delivery p:hover{
+        color: thistle;
     }
     #delivery .contacto {
         margin-bottom: 40px;
         margin-top: -20px;
     }
     #delivery .contacto iframe{
+        width: 300px;
         height: 150px;
+        margin: auto;
     }
     #footer p{
         font-size: 15px;
